    - Users upgrading from very old versions may have to reset passwords
  - CHANGE: smarty template directories for admin requests now includes /assets/templates.
  - Allow svg files to be cached and deflated in the sample htaccess.txt file
  - CHANGE: Now call InitializeFrontend() and InitializeAdmin() from within ModuleOperations::_load_module() on success.  instead of the module constructor.
  - FEATURE: Adds new {theme_root} plugin for admin templates
  - FEATURE: Adds new {admin_headtext} block plugin for admin templates
  - CHANGE: Module actions can now return output rather than echoing it.
  - Allow login via a module (CoreAdminLogin) now is core admin module
  - FEATURE: Adds a new hook for password strength
  - cms_mailer class now throws an exception if attempting to send an email without setting preferences first.
  - BREAKING: New methods and minor cleanup to admin themes (may introduce some breakage)
  - BREAKING: Remove the {cms_jquery} plugin and the cms_get_jquery function in lib/misc.functions.php
    - Users using {cms_jquery} in frontend templates will need to find alternate solutins
    - See {cms_queue_script} and {cms_render_scripts}
  - FEATURE: Adds {cms_queue_script} and {cms_render_scripts} plugins to allow combining javascripts and rendering them in fewer requests.
  - FEATURE: new Core::PreProcessScripts and Core::PostProcessScripts hooks
  - FEATURE: new Core::OnCacheClear hook when CMSMS clears the cache
  - BREAKING: Upgrade the embedded jquery and jquery-ui scripts.
    - some admin side javascript that relies on very old jquery may need changing
  - FEATURE: When using {cms_render_scripts} adds the ability to put inline javascript into <script type="text/cms_javascript">...</script>
    - javascript in these tags will be deferred loaded.
  - CHANGE: Fix lib/nls files so that UTF-8 locales are searched first.
  - FEATURE: cms_admin_utils::get_icon() and {admin_icon} can now find icons without specifying an extension.